--- a/yelp.ipynb
+++ b/yelp.ipynb
@@ -2,36 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting yelpapi\n",
-      "  Downloading yelpapi-2.5.0-py3-none-any.whl (7.4 kB)\n",
-      "Requirement already satisfied: requests in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from yelpapi) (2.28.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (2.1.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (1.26.14)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (2022.12.7)\n",
-      "Installing collected packages: yelpapi\n",
-      "Successfully installed yelpapi-2.5.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution - (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution - (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\python39\\lib\\site-packages)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install yelpapi\n",
     "%pip install requests"
@@ -94,7 +67,7 @@
     "barrios_villa_vallecas=[\"casco historico de vallecas\",\"Santa Eugenia\",\"Ensanche de Vallecas\"]\n",
     "barrios_vicalvaro=[\"casco historico de vicalvaro\",\"valdebernardo\",\"valderrivas\",\"el cañaveral\"]\n",
     "barrios_sanblas_canillejas=[\"simancas\",\"hellin\",\"amposta\",\"arcos\",\"rosas\",\"rejas\",\"canillejas\",\"salvador\"]\n",
-    "barrios_barajas=[\"alameda de osunas\",\"aeropuerto\",\"casco historico de barajas\",\"timon\",\"corralejos\"]"
+    "barrios_barajas=[\"alameda de osuna\",\"aeropuerto\",\"casco historico de barajas\",\"timon\",\"corralejos\"]"
    ]
   },
   {
@@ -120,7 +93,7 @@
     "params = {\n",
     "    'location': 'Arganzuela,Madrid',\n",
     "    'categories': 'restaurants',\n",
-    "    'limit': 50  # Number of results to retrieve (max is 50)\n",
+    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
     "}\n",
     "headers = {\n",
     "    'Authorization': 'Bearer ' + api_key\n",
