--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -512,6 +512,15 @@
     "dfDistritoX\n",
     "#print(f\"Name: {name}, \\nRating: {rating}, \\nAddress: {address}, \\nDescription: {description}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfDistritoX.to_csv(\"../data/distritoX.csv\")"
+   ]
   }
  ],
  "metadata": {
