--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -383,7 +383,7 @@
     "                if \"is_closed\" in restaurant:\n",
     "                    is_closed = restaurant[\"is_closed\"]\n",
     "                else:\n",
-    "                    nombre = None\n",
+    "                    is_closed = None\n",
     "                if \"name\" in restaurant:\n",
     "                    nombre = restaurant[\"name\"]\n",
     "                else:\n",
@@ -391,7 +391,7 @@
     "                if \"review_count\" in restaurant:\n",
     "                    review_count = restaurant[\"review_count\"]\n",
     "                else:\n",
-    "                    nombre = None\n",
+    "                    review_count = None\n",
     "                if \"coordinates\" in restaurant:\n",
     "                    coordinates = restaurant[\"coordinates\"]\n",
     "                else:\n",
