celda superficial fuera

--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -114,71 +114,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n"
-     ]
-    }
-   ],
-   "source": [
-    "url = 'https://api.yelp.com/v3/businesses/search'\n",
-    "params = {\n",
-    "    'location': 'Arganzuela,Madrid',\n",
-    "    'categories': 'restaurants',\n",
-    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
-    "}\n",
-    "headers = {\n",
-    "    'Authorization': 'Bearer ' + api_key\n",
-    "}\n",
-    "res = []\n",
-    "for dis in distritos:\n",
-    "    params[\"location\"] = dis + \",Madrid\"\n",
-    "\n",
-    "\n",
-    "    # Send GET request to the API\n",
-    "    response = requests.get(url, headers=headers, params=params)\n",
-    "    if response.headers.get(\"Content-Type\") == \"application/json\":\n",
-    "        try:\n",
-    "            # Parse the JSON response\n",
-    "            data = response.json()\n",
-    "            # Extract and process restaurants\n",
-    "            restaurants = data['businesses']\n",
-    "            for i,r in enumerate(restaurants[0]):\n",
-    "                    if \"url\" in restaurant:\n",
-    "                        url = restaurant[\"url\"]\n",
-    "                    else:\n",
-    "                        url = None\n",
-    "                \n",
-    "                    \n",
-    "                \n",
-    "                    print(url\n",
-    "                    )\n",
-    "        except json.JSONDecodeError:\n",
-    "            print(\"La respuesta no es un JSON válido\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 182,
    "metadata": {},
    "outputs": [
@@ -515,7 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfDistrito"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
