--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -1,62 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: yelpapi in c:\\python39\\lib\\site-packages (2.5.0)\n",
-      "Requirement already satisfied: requests in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from yelpapi) (2.28.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (2.1.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (1.26.14)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests->yelpapi) (2022.12.7)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution - (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution - (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\python39\\lib\\site-packages)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: requests in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (2.28.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests) (2.1.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests) (1.26.14)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\yporq\\appdata\\roaming\\python\\python39\\site-packages (from requests) (2022.12.7)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution - (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution - (c:\\python39\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\python39\\lib\\site-packages)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install yelpapi\n",
-    "%pip install requests"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -66,14 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "client_id= \"vL5ilzAI2YveKPb6Bw-73w\"\n",
+    "api_key = \"amkwPE-svNE5YEY-1FDPeQQn8vg3q-HkkIZw7QBTB_2NpjmxSSXi0IDwOQDTQNCB2celgcn1batntEiQacr-p1KBABxF-DX3L20hexQBTElKuQ6VpmkkT1I0BqBkZHYx\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,78 +50,13 @@
        "3"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(distritos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n",
-      "https://www.yelp.com/biz/bot%C3%ADn-madrid-3?adjust_creative=ahIDMsj-IWyPblkR9XD1-g&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=ahIDMsj-IWyPblkR9XD1-g\n"
-     ]
-    }
-   ],
-   "source": [
-    "url = 'https://api.yelp.com/v3/businesses/search'\n",
-    "params = {\n",
-    "    'location': 'Arganzuela,Madrid',\n",
-    "    'categories': 'restaurants',\n",
-    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
-    "}\n",
-    "headers = {\n",
-    "    'Authorization': 'Bearer ' + api_key\n",
-    "}\n",
-    "res = []\n",
-    "for dis in distritos:\n",
-    "    params[\"location\"] = dis + \",Madrid\"\n",
-    "\n",
-    "\n",
-    "    # Send GET request to the API\n",
-    "    response = requests.get(url, headers=headers, params=params)\n",
-    "    if response.headers.get(\"Content-Type\") == \"application/json\":\n",
-    "        try:\n",
-    "            # Parse the JSON response\n",
-    "            data = response.json()\n",
-    "            # Extract and process restaurants\n",
-    "            restaurants = data['businesses']\n",
-    "            for i,r in enumerate(restaurants[0]):\n",
-    "                    if \"url\" in restaurant:\n",
-    "                        url = restaurant[\"url\"]\n",
-    "                    else:\n",
-    "                        url = None\n",
-    "                \n",
-    "                    \n",
-    "                \n",
-    "                    print(url\n",
-    "                    )\n",
-    "        except json.JSONDecodeError:\n",
-    "            print(\"La respuesta no es un JSON válido\")\n"
    ]
   },
   {
@@ -337,9 +219,9 @@
     "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "params = {\n",
-    "    'location': 'Arganzuela,Madrid',\n",
+    "    'location': 'vicalvaro,Madrid',\n",
     "    'categories': 'restaurants',\n",
-    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
+    "    'limit': 50  # Number of results to retrieve (max is 50)\n",
     "}\n",
     "headers = {\n",
     "    'Authorization': 'Bearer ' + api_key\n",
@@ -510,7 +392,7 @@
     "\n",
     "dfDistritoX = pd.DataFrame(res)\n",
     "dfDistritoX\n",
-    "#print(f\"Name: {name}, \\nRating: {rating}, \\nAddress: {address}, \\nDescription: {description}\")"
+    "print(f\"Name: {name}, \\nRating: {rating}, \\nAddress: {address}, \\nDescription: {description}\")"
    ]
   },
   {
@@ -539,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.7.4"
   },
   "orig_nbformat": 4
  },
