limite de reviews

--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -69,7 +69,10 @@
    "execution_count": 123,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lient_id = \"ahIDMsj-IWyPblkR9XD1-g\"#\"5v5CeE42PBFGr0l-fmuClA\"\n",
+    "api_key= \"yrmL8wasIICGpCJdKM8NgFOGpvNjj7onUofJgZqxpZ9BpqU7leefJqUCtwvbD8ieBSOM1IY1WGOSpMOup7Fo1VmnUJts1ASO-ri2WBvBpW3RCCYLKCOYZjxOldxlZHYx\"#\"\"XebaNhK8qbRRa1niztr2koMMLhg4Grek0Sx_jWnayqptZK3ZTYaxfxgl0NxQmgqINpBkZM5ERXel_Wc5M6sFBIJsfpw4NfNu_2s9SrIRZucKZfkUoWqK8n-tMZtkZHYx\""
+   ]
   },
   {
    "cell_type": "code",
@@ -89,7 +92,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distritos = ['Centro', 'Arganzuela', 'Retiro']#, 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n"
+    "distritos = ['Centro', 'Arganzuela', 'Retiro']#, 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n",
+    "\"\"\"\n",
+    "Aída - 1,2,3 - 'Centro', 'Arganzuela', 'Retiro'\n",
+    "Carlos - 4,5,6 - 'Salamanca', 'Chamartín', 'Tetuán'\n",
+    "Marina - 7,8,9 - 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca'\n",
+    "Fernando - 10,11,12 - 'Latina', 'Carabanchel', 'Usera'\n",
+    "Víctor - 13,14,15 - 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal'\n",
+    "Richi - 16,17,18 -  'Hortaleza', 'Villaverde', 'Villa de Vallecas'\n",
+    "Álvaro - 19,20,21 - 'Vicálvaro', 'San Blas-Canillejas', 'Barajas'\n",
+    "\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -114,17 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chocolatería San Ginés\n",
-      "Botín\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -218,52 +223,151 @@
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>InClan Brutal</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Calle Álvarez Gato, 4, 28012 Madrid, Spain</td>\n",
+       "      <td>Tapas Bars Mediterranean</td>\n",
+       "      <td>Amazing cocktails and good service!!!!! Also l...</td>\n",
+       "      <td>inclan-brutal-madrid</td>\n",
+       "      <td>https://s3-media3.fl.yelpcdn.com/bphoto/qnACZF...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>171</td>\n",
+       "      <td>{'latitude': 40.41508, 'longitude': -3.70192}</td>\n",
+       "      <td>...</td>\n",
+       "      <td>InClan Brutal</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>La Gastro</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Calle del Barco, 7, 28004 Madrid, Spain</td>\n",
+       "      <td>Gastropubs Spanish Tapas Bars</td>\n",
+       "      <td>Highly recommend for tapas and drinks!!\\n\\nWe ...</td>\n",
+       "      <td>la-gastro-madrid</td>\n",
+       "      <td>https://s3-media1.fl.yelpcdn.com/bphoto/9JvcVX...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>68</td>\n",
+       "      <td>{'latitude': 40.42129, 'longitude': -3.70289}</td>\n",
+       "      <td>...</td>\n",
+       "      <td>La Gastro</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rosi La Loca</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Calle de Cádiz, 4, 28012 Madrid, Spain</td>\n",
+       "      <td>Tapas Bars Spanish</td>\n",
+       "      <td>Rosie La Loca is the result of someone saying ...</td>\n",
+       "      <td>rosi-la-loca-madrid</td>\n",
+       "      <td>https://s3-media3.fl.yelpcdn.com/bphoto/SN6sHZ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>194</td>\n",
+       "      <td>{'latitude': 40.4158141746249, 'longitude': -3...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Rosi La Loca</td>\n",
+       "      <td>None</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 22 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                     name  rating  \\\n",
        "0  Chocolatería San Ginés       5   \n",
        "1                   Botín       5   \n",
+       "2           InClan Brutal       5   \n",
+       "3               La Gastro       5   \n",
+       "4            Rosi La Loca       4   \n",
        "\n",
        "                                         address  \\\n",
        "0  Pasadizo de San Ginés, 5, 28013 Madrid, Spain   \n",
        "1  Calle de Cuchilleros, 17, 28005 Madrid, Spain   \n",
+       "2     Calle Álvarez Gato, 4, 28012 Madrid, Spain   \n",
+       "3        Calle del Barco, 7, 28004 Madrid, Spain   \n",
+       "4         Calle de Cádiz, 4, 28012 Madrid, Spain   \n",
        "\n",
        "                                        description  \\\n",
        "0  Chocolatiers & Shops Churros Breakfast & Brunch    \n",
        "1                              Spanish Steakhouses    \n",
+       "2                         Tapas Bars Mediterranean    \n",
+       "3                    Gastropubs Spanish Tapas Bars    \n",
+       "4                               Tapas Bars Spanish    \n",
        "\n",
        "                                              review  \\\n",
        "0  Before arriving in Madrid this March, the last...   \n",
        "1  MADRID - 05/07/23 - What makes Botin so specia...   \n",
+       "2  Amazing cocktails and good service!!!!! Also l...   \n",
+       "3  Highly recommend for tapas and drinks!!\\n\\nWe ...   \n",
+       "4  Rosie La Loca is the result of someone saying ...   \n",
        "\n",
        "                             alias  \\\n",
        "0  chocolatería-san-ginés-madrid-6   \n",
        "1                   botín-madrid-3   \n",
+       "2             inclan-brutal-madrid   \n",
+       "3                 la-gastro-madrid   \n",
+       "4              rosi-la-loca-madrid   \n",
        "\n",
        "                                           image_url  is_closed  review_count  \\\n",
        "0  https://s3-media4.fl.yelpcdn.com/bphoto/hwpN-t...      False          1332   \n",
        "1  https://s3-media2.fl.yelpcdn.com/bphoto/UpGNFa...      False           647   \n",
+       "2  https://s3-media3.fl.yelpcdn.com/bphoto/qnACZF...      False           171   \n",
+       "3  https://s3-media1.fl.yelpcdn.com/bphoto/9JvcVX...      False            68   \n",
+       "4  https://s3-media3.fl.yelpcdn.com/bphoto/SN6sHZ...      False           194   \n",
        "\n",
-       "                                      coordinates  ...  \\\n",
-       "0  {'latitude': 40.4167599, 'longitude': -3.7068}  ...   \n",
-       "1   {'latitude': 40.41406, 'longitude': -3.70803}  ...   \n",
+       "                                         coordinates  ...  \\\n",
+       "0     {'latitude': 40.4167599, 'longitude': -3.7068}  ...   \n",
+       "1      {'latitude': 40.41406, 'longitude': -3.70803}  ...   \n",
+       "2      {'latitude': 40.41508, 'longitude': -3.70192}  ...   \n",
+       "3      {'latitude': 40.42129, 'longitude': -3.70289}  ...   \n",
+       "4  {'latitude': 40.4158141746249, 'longitude': -3...  ...   \n",
        "\n",
        "                    price hours transactions languages attributes transit  \\\n",
        "0  Chocolatería San Ginés  None           []      None       None    None   \n",
        "1                   Botín  None           []      None       None    None   \n",
+       "2           InClan Brutal  None           []      None       None    None   \n",
+       "3               La Gastro  None           []      None       None    None   \n",
+       "4            Rosi La Loca  None           []      None       None    None   \n",
        "\n",
        "  best_time delivery pickup online_ordering  \n",
        "0      None     None   None            None  \n",
        "1      None     None   None            None  \n",
+       "2      None     None   None            None  \n",
+       "3      None     None   None            None  \n",
+       "4      None     None   None            None  \n",
        "\n",
-       "[2 rows x 22 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +378,7 @@
     "params = {\n",
     "    'location': 'Arganzuela,Madrid',\n",
     "    'categories': 'restaurants',\n",
-    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
+    "    'limit': 50  # Number of results to retrieve (max is 50)\n",
     "}\n",
     "headers = {\n",
     "    'Authorization': 'Bearer ' + api_key\n",
@@ -407,18 +511,14 @@
     "                # Process and print the reviews\n",
     "                \n",
     "                rev = \"\"\n",
-    "                for review in reviews:\n",
+    "                for review in reviews[:5]:\n",
     "                    review_text = review['text']\n",
     "                    rating = review['rating']\n",
     "                    reviewer_name = review['user']['name']\n",
     "\n",
     "                    rev = rev + review_text + \". \"   \n",
     "                    \n",
-    "                \n",
-    "                print(\n",
-    "                    nombre\n",
-    "                    \n",
-    "                    )\n",
+    "             \n",
     "                res.append({\n",
     "                    \"name\" : name, \"rating\": rating, \"address\": address, \"description\": description, \"review\": rev,\n",
     "                    \"alias\":alias,\n",
@@ -444,26 +544,17 @@
     "            print(\"La respuesta no es un JSON válido\")\n",
     "\n",
     "dfDistritoX = pd.DataFrame(res)\n",
-    "dfDistritoX\n",
+    "dfDistritoX.head()\n",
     "#print(f\"Name: {name}, \\nRating: {rating}, \\nAddress: {address}, \\nDescription: {description}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfDistrito"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfDistritoX.to_csv(\"../data/distritoX.csv\")"
+    "dfDistritoX.to_csv(\"../data/distrito1.csv\")"
    ]
   }
  ],
