--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -66,12 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lient_id = \"ahIDMsj-IWyPblkR9XD1-g\"#\"5v5CeE42PBFGr0l-fmuClA\"\n",
-    "api_key= \"yrmL8wasIICGpCJdKM8NgFOGpvNjj7onUofJgZqxpZ9BpqU7leefJqUCtwvbD8ieBSOM1IY1WGOSpMOup7Fo1VmnUJts1ASO-ri2WBvBpW3RCCYLKCOYZjxOldxlZHYx\"#\"\"XebaNhK8qbRRa1niztr2koMMLhg4Grek0Sx_jWnayqptZK3ZTYaxfxgl0NxQmgqINpBkZM5ERXel_Wc5M6sFBIJsfpw4NfNu_2s9SrIRZucKZfkUoWqK8n-tMZtkZHYx\""
+    "client_id =\"5v5CeE42PBFGr0l-fmuClA\"# \"ahIDMsj-IWyPblkR9XD1-g\"#\n",
+    "api_key= \"XebaNhK8qbRRa1niztr2koMMLhg4Grek0Sx_jWnayqptZK3ZTYaxfxgl0NxQmgqINpBkZM5ERXel_Wc5M6sFBIJsfpw4NfNu_2s9SrIRZucKZfkUoWqK8n-tMZtkZHYx\"#\"yrmL8wasIICGpCJdKM8NgFOGpvNjj7onUofJgZqxpZ9BpqU7leefJqUCtwvbD8ieBSOM1IY1WGOSpMOup7Fo1VmnUJts1ASO-ri2WBvBpW3RCCYLKCOYZjxOldxlZHYx\"#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_id = \"1Dl0wyAQpYXh2PSMWHI2kA\"\n",
+    "api_key= \"qwilEkJ8vfWUWFApQXHeMkYiLtpKgRHUoOwSkPY7icpGqXZ1438NjfhmbDAjGZFLKT7ZuQffLB22ju27vE3RHi22_biqmyzTsV-hJQ4HNn577FMXTEsokDDrRthlZHYx\"\n"
    ]
   },
   {
@@ -103,7 +113,7 @@
     }
    ],
    "source": [
-    "distritos = ['Centro', 'Arganzuela', 'Retiro']#, 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n",
+    "#distritos = ['Centro', 'Arganzuela', 'Retiro', 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n",
     "\"\"\"\n",
     "Aída - 1,2,3 - 'Centro', 'Arganzuela', 'Retiro'\n",
     "Carlos - 4,5,6 - 'Salamanca', 'Chamartín', 'Tetuán'\n",
@@ -118,20 +128,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distritos = [\n",
+    "    {\"district\": \"Centro\", \"latitude\": 40.415363, \"longitude\": -3.707398},\n",
+    "    {\"district\": \"Arganzuela\", \"latitude\": 40.398068, \"longitude\": -3.693734},\n",
+    "    {\"district\": \"Retiro\", \"latitude\": 40.411894, \"longitude\": -3.676574},\n",
+    "    {\"district\": \"Salamanca\", \"latitude\": 40.427919, \"longitude\": -3.680877},\n",
+    "    {\"district\": \"Chamartín\", \"latitude\": 40.462428, \"longitude\": -3.676057},\n",
+    "    {\"district\": \"Tetuán\", \"latitude\": 40.466676, \"longitude\": -3.698984},\n",
+    "    {\"district\": \"Chamberí\", \"latitude\": 40.436247, \"longitude\": -3.703830},\n",
+    "    {\"district\": \"Fuencarral-El Pardo\", \"latitude\": 40.515923, \"longitude\": -3.785586},\n",
+    "    {\"district\": \"Moncloa-Aravaca\", \"latitude\": 40.439883, \"longitude\": -3.744509},\n",
+    "    {\"district\": \"Latina\", \"latitude\": 40.388981, \"longitude\": -3.753525},\n",
+    "    {\"district\": \"Carabanchel\", \"latitude\": 40.377818, \"longitude\": -3.751209},\n",
+    "    {\"district\": \"Usera\", \"latitude\": 40.383553, \"longitude\": -3.706070},\n",
+    "    {\"district\": \"Puente de Vallecas\", \"latitude\": 40.389491, \"longitude\": -3.669062},\n",
+    "    {\"district\": \"Moratalaz\", \"latitude\": 40.407251, \"longitude\": -3.644992},\n",
+    "    {\"district\": \"Ciudad Lineal\", \"latitude\": 40.448431, \"longitude\": -3.650495},\n",
+    "    {\"district\": \"Hortaleza\", \"latitude\": 40.474457, \"longitude\": -3.640892},\n",
+    "    {\"district\": \"Villaverde\", \"latitude\": 40.345610, \"longitude\": -3.695956},\n",
+    "    {\"district\": \"Villa de Vallecas\", \"latitude\": 40.367040, \"longitude\": -3.612046},\n",
+    "    {\"district\": \"Vicálvaro\", \"latitude\": 40.396584, \"longitude\": -3.576622},\n",
+    "    {\"district\": \"San Blas-Canillejas\", \"latitude\": 40.428918, \"longitude\": -3.609064},\n",
+    "    {\"district\": \"Barajas\", \"latitude\": 40.477628, \"longitude\": -3.579394}\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
-     "ename": "YelpAPIError",
-     "evalue": "ACCESS_LIMIT_REACHED: You've reached the access limit for this client. See instructions for requesting a higher access limit at https://docs.developer.yelp.com/docs/fusion-rate-limiting",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'error': {'code': 'ACCESS_LIMIT_REACHED', 'description': \"You've reached the access limit for this client. See instructions for requesting a higher access limit at https://docs.developer.yelp.com/docs/fusion-rate-limiting\"}}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'businesses'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mYelpAPIError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[223], line 134\u001b[0m\n\u001b[0;32m    131\u001b[0m description \u001b[39m=\u001b[39m description  \n\u001b[0;32m    133\u001b[0m \u001b[39m# Make the API call to retrieve reviews for the current business\u001b[39;00m\n\u001b[1;32m--> 134\u001b[0m reviews_response \u001b[39m=\u001b[39m yelp_api\u001b[39m.\u001b[39;49mreviews_query(\u001b[39mid\u001b[39;49m\u001b[39m=\u001b[39;49mrestaurant[\u001b[39m\"\u001b[39;49m\u001b[39mid\u001b[39;49m\u001b[39m\"\u001b[39;49m],location\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mMadrid\u001b[39;49m\u001b[39m\"\u001b[39;49m, lang\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mes\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m    136\u001b[0m \u001b[39m# Extract the reviews from the response\u001b[39;00m\n\u001b[0;32m    137\u001b[0m reviews \u001b[39m=\u001b[39m reviews_response[\u001b[39m'\u001b[39m\u001b[39mreviews\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\yelpapi\\yelpapi.py:234\u001b[0m, in \u001b[0;36mYelpAPI.reviews_query\u001b[1;34m(self, id, **kwargs)\u001b[0m\n\u001b[0;32m    231\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mid\u001b[39m:\n\u001b[0;32m    232\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mA valid business ID (parameter \u001b[39m\u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m) must be provided.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m--> 234\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_query(REVIEWS_API_URL\u001b[39m.\u001b[39mformat(\u001b[39mid\u001b[39m), \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\yelpapi\\yelpapi.py:299\u001b[0m, in \u001b[0;36mYelpAPI._query\u001b[1;34m(self, url, **kwargs)\u001b[0m\n\u001b[0;32m    295\u001b[0m \u001b[39m# Yelp can return one of many different API errors, so check for one of them.\u001b[39;00m\n\u001b[0;32m    296\u001b[0m \u001b[39m# The Yelp Fusion API does not yet have a complete list of errors, but this is on the TODO list; see\u001b[39;00m\n\u001b[0;32m    297\u001b[0m \u001b[39m# https://github.com/Yelp/yelp-fusion/issues/95 for more info.\u001b[39;00m\n\u001b[0;32m    298\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m response_json:\n\u001b[1;32m--> 299\u001b[0m     \u001b[39mraise\u001b[39;00m YelpAPI\u001b[39m.\u001b[39mYelpAPIError(\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(response_json[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mcode\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m    300\u001b[0m                                                response_json[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mdescription\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[0;32m    302\u001b[0m \u001b[39m# we got a good response, so return\u001b[39;00m\n\u001b[0;32m    303\u001b[0m \u001b[39mreturn\u001b[39;00m response_json\n",
-      "\u001b[1;31mYelpAPIError\u001b[0m: ACCESS_LIMIT_REACHED: You've reached the access limit for this client. See instructions for requesting a higher access limit at https://docs.developer.yelp.com/docs/fusion-rate-limiting"
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[237], line 26\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[39mprint\u001b[39m(data)\n\u001b[0;32m     25\u001b[0m \u001b[39m# Extract and process restaurants\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m restaurants \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39;49m\u001b[39mbusinesses\u001b[39;49m\u001b[39m'\u001b[39;49m]           \n\u001b[0;32m     28\u001b[0m \u001b[39mfor\u001b[39;00m restaurant \u001b[39min\u001b[39;00m restaurants:\n\u001b[0;32m     29\u001b[0m     description \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'businesses'"
      ]
     }
    ],
@@ -139,19 +185,19 @@
     "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
     "params = {    \n",
-    "    'categories': 'restaurants',\n",
-    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
-    "}\n",
+    "        \n",
+    "        'categories': 'restaurants',\n",
+    "        \"radius\": 1000,\n",
+    "        'limit': 2  # Number of results to retrieve (max is 50)\n",
+    "    }\n",
     "headers = {\n",
     "    'Authorization': 'Bearer ' + api_key\n",
     "}\n",
     "res = []\n",
-    "for dis in distritos:\n",
-    "    #params[\"location\"] = dis + \",Madrid\"\n",
+    "for dis in distritos:  \n",
     "    params = {    \n",
-    "        \"location\": dis,\n",
-    "        'categories': 'restaurants',\n",
-    "        'limit': 2  # Number of results to retrieve (max is 50)\n",
+    "        \"latitude\": dis[\"latitude\"],\n",
+    "        \"longitude\": dis[\"longitude\"]        \n",
     "    }\n",
     "\n",
     "    # Send GET request to the API\n",
@@ -160,7 +206,8 @@
     "        try:\n",
     "            # Parse the JSON response\n",
     "            data = response.json()\n",
-    "               # Extract and process restaurants\n",
+    "            print(data)\n",
+    "            # Extract and process restaurants\n",
     "            restaurants = data['businesses']           \n",
     "            \n",
     "            for restaurant in restaurants:\n",
