--- a/Notebooks/yelp.ipynb
+++ b/Notebooks/yelp.ipynb
@@ -66,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lient_id = \"ahIDMsj-IWyPblkR9XD1-g\"#\"5v5CeE42PBFGr0l-fmuClA\"\n",
-    "api_key= \"yrmL8wasIICGpCJdKM8NgFOGpvNjj7onUofJgZqxpZ9BpqU7leefJqUCtwvbD8ieBSOM1IY1WGOSpMOup7Fo1VmnUJts1ASO-ri2WBvBpW3RCCYLKCOYZjxOldxlZHYx\"#\"\"XebaNhK8qbRRa1niztr2koMMLhg4Grek0Sx_jWnayqptZK3ZTYaxfxgl0NxQmgqINpBkZM5ERXel_Wc5M6sFBIJsfpw4NfNu_2s9SrIRZucKZfkUoWqK8n-tMZtkZHYx\""
+    "lient_id = \"xloJPd8uu_wT5OA7iEGqfg\"\n",
+    "api_key= \"Q1QkFZJjdwCzYsP8JQP52gl7M-DRn1KRgVU6Fu26dHk-v8mg_jw5_ID9VDPpu7UdPhrI8RIDKFsnDq-3kZJEwi4P8KY4oTha6ibEp9_s7ODRPz50KbsFqBVzhNxlZHYx\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +97,13 @@
        "\"\\nAída - 1,2,3 - 'Centro', 'Arganzuela', 'Retiro'\\nCarlos - 4,5,6 - 'Salamanca', 'Chamartín', 'Tetuán'\\nMarina - 7,8,9 - 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca'\\nFernando - 10,11,12 - 'Latina', 'Carabanchel', 'Usera'\\nVíctor - 13,14,15 - 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal'\\nRichi - 16,17,18 -  'Hortaleza', 'Villaverde', 'Villa de Vallecas'\\nÁlvaro - 19,20,21 - 'Vicálvaro', 'San Blas-Canillejas', 'Barajas'\\n\\n\""
       ]
      },
-     "execution_count": 208,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "distritos = ['Centro', 'Arganzuela', 'Retiro']#, 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n",
+    "distritos = ['Salamanca', 'Chamartín', 'Tetuán']#, 'Salamanca', 'Chamartín', 'Tetuán', 'Chamberí', 'Fuencarral-El Pardo', 'Moncloa-Aravaca', 'Latina', 'Carabanchel', 'Usera', 'Puente de Vallecas', 'Moratalaz', 'Ciudad Lineal', 'Hortaleza', 'Villaverde', 'Villa de Vallecas', 'Vicálvaro', 'San Blas-Canillejas', 'Barajas']\n",
     "\"\"\"\n",
     "Aída - 1,2,3 - 'Centro', 'Arganzuela', 'Retiro'\n",
     "Carlos - 4,5,6 - 'Salamanca', 'Chamartín', 'Tetuán'\n",
@@ -118,23 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "YelpAPIError",
-     "evalue": "ACCESS_LIMIT_REACHED: You've reached the access limit for this client. See instructions for requesting a higher access limit at https://docs.developer.yelp.com/docs/fusion-rate-limiting",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mYelpAPIError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[223], line 134\u001b[0m\n\u001b[0;32m    131\u001b[0m description \u001b[39m=\u001b[39m description  \n\u001b[0;32m    133\u001b[0m \u001b[39m# Make the API call to retrieve reviews for the current business\u001b[39;00m\n\u001b[1;32m--> 134\u001b[0m reviews_response \u001b[39m=\u001b[39m yelp_api\u001b[39m.\u001b[39;49mreviews_query(\u001b[39mid\u001b[39;49m\u001b[39m=\u001b[39;49mrestaurant[\u001b[39m\"\u001b[39;49m\u001b[39mid\u001b[39;49m\u001b[39m\"\u001b[39;49m],location\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mMadrid\u001b[39;49m\u001b[39m\"\u001b[39;49m, lang\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mes\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m    136\u001b[0m \u001b[39m# Extract the reviews from the response\u001b[39;00m\n\u001b[0;32m    137\u001b[0m reviews \u001b[39m=\u001b[39m reviews_response[\u001b[39m'\u001b[39m\u001b[39mreviews\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\yelpapi\\yelpapi.py:234\u001b[0m, in \u001b[0;36mYelpAPI.reviews_query\u001b[1;34m(self, id, **kwargs)\u001b[0m\n\u001b[0;32m    231\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mid\u001b[39m:\n\u001b[0;32m    232\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mA valid business ID (parameter \u001b[39m\u001b[39m\"\u001b[39m\u001b[39mid\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m) must be provided.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m--> 234\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_query(REVIEWS_API_URL\u001b[39m.\u001b[39mformat(\u001b[39mid\u001b[39m), \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Python39\\lib\\site-packages\\yelpapi\\yelpapi.py:299\u001b[0m, in \u001b[0;36mYelpAPI._query\u001b[1;34m(self, url, **kwargs)\u001b[0m\n\u001b[0;32m    295\u001b[0m \u001b[39m# Yelp can return one of many different API errors, so check for one of them.\u001b[39;00m\n\u001b[0;32m    296\u001b[0m \u001b[39m# The Yelp Fusion API does not yet have a complete list of errors, but this is on the TODO list; see\u001b[39;00m\n\u001b[0;32m    297\u001b[0m \u001b[39m# https://github.com/Yelp/yelp-fusion/issues/95 for more info.\u001b[39;00m\n\u001b[0;32m    298\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m response_json:\n\u001b[1;32m--> 299\u001b[0m     \u001b[39mraise\u001b[39;00m YelpAPI\u001b[39m.\u001b[39mYelpAPIError(\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(response_json[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mcode\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m    300\u001b[0m                                                response_json[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mdescription\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[0;32m    302\u001b[0m \u001b[39m# we got a good response, so return\u001b[39;00m\n\u001b[0;32m    303\u001b[0m \u001b[39mreturn\u001b[39;00m response_json\n",
-      "\u001b[1;31mYelpAPIError\u001b[0m: ACCESS_LIMIT_REACHED: You've reached the access limit for this client. See instructions for requesting a higher access limit at https://docs.developer.yelp.com/docs/fusion-rate-limiting"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
@@ -145,13 +131,19 @@
     "headers = {\n",
     "    'Authorization': 'Bearer ' + api_key\n",
     "}\n",
+    "latitude_value= 40.411390924552144\n",
+    "longitude_value= -3.6643494118331197\n",
+    "radius_value= 100\n",
+    "\n",
     "res = []\n",
     "for dis in distritos:\n",
     "    #params[\"location\"] = dis + \",Madrid\"\n",
     "    params = {    \n",
-    "        \"location\": dis,\n",
-    "        'categories': 'restaurants',\n",
-    "        'limit': 2  # Number of results to retrieve (max is 50)\n",
+    "    \"latitude\": latitude_value,  # Latitud de la ubicación deseada\n",
+    "    \"longitude\": longitude_value,  # Longitud de la ubicación deseada\n",
+    "    \"radius\": radius_value,  # Radio en metros para buscar restaurantes alrededor de la ubicación\n",
+    "    'categories': 'restaurants',\n",
+    "    'limit': 2  # Number of results to retrieve (max is 50)\n",
     "    }\n",
     "\n",
     "    # Send GET request to the API\n",
@@ -316,7 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfDistritoX = pd.DataFrame(res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -366,42 +367,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Ten con Ten</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Calle de Ayala, 6, 28001 Madrid, Spain</td>\n",
-       "      <td>Modern European</td>\n",
-       "      <td>This place came highly recommended by a friend...</td>\n",
-       "      <td>ten-con-ten-madrid</td>\n",
-       "      <td>https://s3-media2.fl.yelpcdn.com/bphoto/kfmmQ0...</td>\n",
+       "      <td>Norba</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Calle Sirio, 26, 28007 Madrid, Spain</td>\n",
+       "      <td>Spanish Wine Bars</td>\n",
+       "      <td></td>\n",
+       "      <td>norba-madrid</td>\n",
+       "      <td>https://s3-media1.fl.yelpcdn.com/bphoto/gLxaRr...</td>\n",
        "      <td>False</td>\n",
-       "      <td>175</td>\n",
-       "      <td>40.427957</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40.412098</td>\n",
        "      <td>...</td>\n",
-       "      <td>Ten con Ten</td>\n",
        "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>La Tasqueria</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Calle Duque de Sesto, 48, 28009 Madrid, Spain</td>\n",
-       "      <td>Spanish Mediterranean</td>\n",
-       "      <td>This is definitely my favorite restaurant in M...</td>\n",
-       "      <td>la-tasqueria-madrid-3</td>\n",
-       "      <td>https://s3-media2.fl.yelpcdn.com/bphoto/71cLsf...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>22</td>\n",
-       "      <td>40.422279</td>\n",
-       "      <td>...</td>\n",
-       "      <td>La Tasqueria</td>\n",
        "      <td>None</td>\n",
        "      <td>[]</td>\n",
        "      <td>None</td>\n",
@@ -414,34 +391,26 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 23 columns</p>\n",
+       "<p>1 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           name  rating                                        address  \\\n",
-       "0   Ten con Ten       5         Calle de Ayala, 6, 28001 Madrid, Spain   \n",
-       "1  La Tasqueria       5  Calle Duque de Sesto, 48, 28009 Madrid, Spain   \n",
+       "    name  rating                               address         description  \\\n",
+       "0  Norba     4.0  Calle Sirio, 26, 28007 Madrid, Spain  Spanish Wine Bars    \n",
        "\n",
-       "              description                                             review  \\\n",
-       "0        Modern European   This place came highly recommended by a friend...   \n",
-       "1  Spanish Mediterranean   This is definitely my favorite restaurant in M...   \n",
+       "  review         alias                                          image_url  \\\n",
+       "0         norba-madrid  https://s3-media1.fl.yelpcdn.com/bphoto/gLxaRr...   \n",
        "\n",
-       "                   alias                                          image_url  \\\n",
-       "0     ten-con-ten-madrid  https://s3-media2.fl.yelpcdn.com/bphoto/kfmmQ0...   \n",
-       "1  la-tasqueria-madrid-3  https://s3-media2.fl.yelpcdn.com/bphoto/71cLsf...   \n",
-       "\n",
-       "   is_closed  review_count   latitude  ...         price hours transactions  \\\n",
-       "0      False           175  40.427957  ...   Ten con Ten  None           []   \n",
-       "1      False            22  40.422279  ...  La Tasqueria  None           []   \n",
+       "   is_closed  review_count   latitude  ...  price hours transactions  \\\n",
+       "0      False             1  40.412098  ...   None  None           []   \n",
        "\n",
        "  languages attributes transit best_time delivery pickup online_ordering  \n",
        "0      None       None    None      None     None   None            None  \n",
-       "1      None       None    None      None     None   None            None  \n",
        "\n",
-       "[2 rows x 23 columns]"
+       "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,66 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     40.415080\n",
-       "1     40.410999\n",
-       "2     40.411358\n",
-       "3     40.412400\n",
-       "4     40.412325\n",
-       "5     40.421290\n",
-       "6     40.420185\n",
-       "7     40.415464\n",
-       "8     40.415814\n",
-       "9     40.411048\n",
-       "10    40.414060\n",
-       "11    40.420455\n",
-       "12    40.414641\n",
-       "13    40.412870\n",
-       "14    40.415552\n",
-       "15    40.427957\n",
-       "16    40.440875\n",
-       "17    40.414924\n",
-       "18    40.411770\n",
-       "19    40.425884\n",
-       "20    40.437931\n",
-       "21    40.415006\n",
-       "22    40.425512\n",
-       "23    40.411093\n",
-       "24    40.416760\n",
-       "25    40.448094\n",
-       "26    40.412714\n",
-       "27    40.428790\n",
-       "28    40.415870\n",
-       "29    40.420276\n",
-       "30    40.412470\n",
-       "31    40.412065\n",
-       "32    40.423750\n",
-       "33    40.426088\n",
-       "34    40.433915\n",
-       "35    40.415767\n",
-       "36    40.415742\n",
-       "37    40.437668\n",
-       "38    40.422059\n",
-       "39    40.457888\n",
-       "40    40.408340\n",
-       "41    40.418963\n",
-       "42    40.421940\n",
-       "43    40.410020\n",
-       "44    40.422279\n",
-       "45    40.422350\n",
-       "46    40.416317\n",
-       "47    40.411419\n",
-       "48    40.410455\n",
-       "49    40.426149\n",
+       "0    40.412098\n",
        "Name: latitude, dtype: float64"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
